@@ -6,6 +6,9 @@
 1706.	[bug]		'rndc stop' failed to cause zones to be flushed
 			sometimes. [RT #12328]
 
+1703.	[bug]		named would loop sending NOTIFY messages when it
+			failed to receive a response. [RT #12322]
+
 1702.	[bug]		also-notify should not be applied to builtin zones.
 			[RT #12323]
 
